--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2"
+  },
+  "dependencies": {
+    "puppeteer": "^2.0.0"
   }
 }
